# Gospeak

./: .gitignore  LICENSE  README.md  design-qa.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md
docs/: HANDOFF_2026-07-14.md  LIGHT_REWRITE_MANUAL_TEST.md  P0_ACCEPTANCE_MATRIX.md  P0_STATUS_PLAN.md  PRODUCT_PRD.md  QWEN_LOCAL_ASR.md
docs/superpowers/plans/: 2026-06-30-app-aware-routing-cost.md  2026-07-01-streaming-dictation.md  2026-07-02-light-rewrite.md  2026-07-10-frontend-information-architecture.md  (+11 more)
src/: App.css  App.css.test.ts  App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_context.rs  audio.rs  clipboard.rs  lib.rs  light_rewrite.rs  provider.rs  qwen_local.rs  storage.rs  streaming.rs
src-tauri/tests/: native_paste_smoke.rs
src/components/: DictionaryPage.test.tsx  DictionaryPage.tsx  GeneralPage.test.tsx  GeneralPage.tsx  ProfilesPage.test.tsx  ProfilesPage.tsx  ProvidersPage.test.tsx  ProvidersPage.tsx  RecorderOverlay.test.tsx  RecorderOverlay.tsx  SettingsPage.test.tsx  SettingsPage.tsx  ui.test.tsx  ui.tsx
src/domain/: config.test.ts  config.ts  dictation.test.ts  dictation.ts  navigation.ts  providerConfigurations.test.ts  providerConfigurations.ts  usage.test.ts  usage.ts
src/lib/: tauri.test.ts  tauri.ts
tests/: capabilities.test.ts
(+13 files in other folders)
